[package]
name = "nonscalar"
version = "0.1.0"
edition = "2021"
description = "Functions and types for operating on nonscalar values like vectors"
readme = "README.md"
repository = "https://github.com/hunterlawson/nonscalar"
license = "MIT OR Apache-2.0"
license-file = "LICENSE"
keywords = ["scalar", "vector", "nonscalar", "math"]
categories = ["mathematics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
